# NASSAV

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  abstract.md  cron_task.sh  frontend_implementation_plan.md  implement_backend.md  metadata.py  plan.md  plan_backend.md  plan_frontend.md  python-lint.txt
django_backend/: .env.example  .gitignore  AGENT.md  JUR-448.html  README.md  ResourceServiceInterface.md  WEBSOCKET_GUIDE.md  interfaces.md  log_config.py  pyproject.toml  pytest_error.txt  task.md
django_backend/config/: config.yaml  template-config.yaml
django_backend/django_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_backend/doc/: database.md  debug.md  interface.md  interfaces.md  openapi.yaml
django_backend/frontend_adaptation/: implement.md
django_backend/interface_optimize_doc/: 0001_plan_patch.md  0002_step4_design.md  changes_for_frontend.md  plan.md  step1_report.md
django_backend/nassav/: __init__.py  admin.py  api_utils.py  apps.py  constants.py  consumers.py  models.py  openapi_config.py  resource_service.py  routing.py  serializers.py  services.py  tasks.py  urls.py  user_settings.py  utils.py  views.py
django_backend/scripts/: README.md  backfill_actor_avatars.py  batch_translate.py  batch_translate_titles.py  cleanup_unused_genres.py  demo_avatar_download.py  demo_javbus_cover.py  fix_actor_avatars.py  fix_actor_names.py  fix_avid_prefix_titles.py  fix_durations.py  fix_refresh_inconsistency.py  fix_source_titles.py  generate_openapi.py  generate_thumbnails.py  grab_db.py  migrate_metadata_to_db.py  migrate_resource_paths.py  migrate_titles_to_new_schema.py  populate_media_fields.py  update_metadata_from_javbus.py
django_backend/tests/: FILE_STATUS.md  README.md  REFACTOR_PLAN.md  TEST_SUITE_OVERVIEW.py  conftest.py  demo_javbus_fix.py  test_actor_avatar_api.py  test_actors_api.py  (+31 more)
(+141 files in other folders)
