[project]
name = "django-backend"
version = "0.1.0"
description = "NASSAV Django Backend with Celery async task support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "celery>=5.4",
    "redis>=5.0",
    "pyyaml>=6.0",
    "curl-cffi>=0.14.0",
    "pillow>=11.0",
    "loguru>=0.7",
    "pip>=25.3",
    "uvicorn>=0.40.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "celery-types>=0.24.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "bs4>=0.0.2",
    "websockets>=15.0.1",
    "django-cors-headers>=4.9.0",
    "pre-commit>=4.5.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
